Fix some conflicts